--- a/setting.html
+++ b/setting.html
@@ -5,7 +5,7 @@
   <style>
     body { 
       font-family: Arial, sans-serif;
-      width: 200px;
+      width: 100%;
     }
     button { 
       padding: 10px 20px; 
@@ -18,13 +18,27 @@
     button:hover {
       background-color: #0b7dda;
     }
+    .form-group {
+      margin: 10px;
+      display: flex;
+    }
+    .form-group label {
+      margin-right: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
   </style>
-  <script src="dbManager.js"></script>
   <script src="setting.js"></script>
 </head>
 <body>
   <h2>Insert Data to Google Form</h2>
-  <div style="margin: 10px;">
+  <div class="form-group">
+    <label for="url">Url :</label>
+    <input type="text" id="url">
+  </div>
+  <div class="form-group">
+    <label for="fileCsv">File CSV :</label>
     <input type="file" id="fileCsv" accept=".csv">
   </div>
   <div style="margin: 10px;">
